src/calfSystem.css
/* Guild Hall */
.fshHallPref {
  position: absolute;
  right: 1em;
  top: 0.2em;
}

/* Crafting & Forging */
.fshItemGrid {
  display: grid;
  grid-gap: 2px;
  grid-template-columns: repeat(9, 60px);
  justify-content: center;
}

.fshItemGrid div {
  align-items: center;
  background: url('https://cdn.fallensword.com/inventory/2x3.gif');
  display: flex;
  height: 90px;
  justify-content: center;
  width: 60px;
}

.fshItemGrid .fshHide {
  display: none;
}

/* Guild Manage */
.fsh-dialog-overlay {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: rgba(0, 0, 0, 0.5);
  -webkit-transform: translateX(-100vw);
  transform: translateX(-100vw);
}
.fsh-dialog-cancel {
  position: absolute;
  width: 100%;
  height: 100%;
}
.fsh-dialog-popup {
  width: 644px;
  top: 75px;
  left: 50%;
  margin-left: -322px;
  right: 0;
  -webkit-transform: translateX(-100vw);
  transform: translateX(-100vw);
  position: absolute;
}
.fsh-dialog-open,
.fsh-tab-open {
  display: none;
}
.fsh-dialog-open:checked ~ div {
  -webkit-transform: none;
  transform: none;
}
.fsh-tab-label {
  cursor: pointer;
  display: block;
  padding: 0.5em 0.5em;
}
.fsh-dialog .fsh-dialog-close {
  top: 13px;
  opacity: 0.8;
  transition: opacity 200ms;
  font-size: 24px;
  font-weight: bold;
  text-decoration: none;
  color: #666666;
  cursor: pointer;
  padding: 0;
}
.fsh-dialog .fsh-dialog-close:hover {
  opacity: 1;
}
.fsh-tab-open:nth-child(1):checked ~ ul li:nth-child(1),
.fsh-tab-open:nth-child(2):checked ~ ul li:nth-child(2) {
  background: #ffa614 url(https://www.fallensword.com/media/dist/img/jQueryUITheme/ui-bg_gloss-wave_30_ffa614_500x100.png) 50% 50% repeat;
  margin-bottom: 0;
  padding-bottom: 1px;
  border: 1px solid #655e4e;
  color: #381f00;
}
.fsh-tab-open:nth-child(1):checked ~ ul li:nth-child(1) label:hover,
.fsh-tab-open:nth-child(2):checked ~ ul li:nth-child(2) label:hover {
  cursor: text;
}
.fsh-tab-open:nth-child(1):checked ~ ul li:nth-child(2):hover,
.fsh-tab-open:nth-child(2):checked ~ ul li:nth-child(1):hover {
  border: 1px solid #a45b13;
  background: #f0be00 url(https://www.fallensword.com/media/dist/img/jQueryUITheme/ui-bg_gloss-wave_70_f0be00_500x100.png) 50% 50% repeat-x;
  color: #381f00;
}
.fsh-dialog-content {
  margin: 12px;
  position: relative;
}
.fsh-dialog-content > div {
  -webkit-transform: translateX(-100vw);
  transform: translateX(-100vw);
}
.fsh-dialog-content > div:first-of-type {
  position: relative;
}
.fsh-dialog-content > div:nth-of-type(n+2) {
  position: absolute;
  top: 0;
  left: 0;
}
.fsh-tab-open:nth-child(1):checked ~ .fsh-dialog-content > div:nth-child(1),
.fsh-tab-open:nth-child(2):checked ~ .fsh-dialog-content > div:nth-child(2) {
  -webkit-transform: none;
  transform: none;
}

#tg {
  border: none;
  width: 620px;
  table-layout: fixed;
}
#tg td:nth-child(1), #tg th:nth-child(1) {width: 115px;}
#tg td:nth-child(2), #tg th:nth-child(2) {width: 79px;}
#tg td:nth-child(3), #tg th:nth-child(3) {width: 39px;}
#tg td:nth-child(4), #tg th:nth-child(4) {width: 39px;}
#tg td:nth-child(5), #tg th:nth-child(5) {width: 49px;}
#tg td:nth-child(6), #tg th:nth-child(6) {width: 49px;}
#tg td:nth-child(7), #tg th:nth-child(7) {width: 30px;}
#tg td:nth-child(8), #tg th:nth-child(8) {width: 40px;}
#tg td:nth-child(9), #tg th:nth-child(9) {width: 100px;}
#tg thead tr {
  display: block;
  position: relative;
  background-color: #CD9E4B;
}
#tg tbody {
  display: block;
  height: 60vh;
  overflow: auto;
  width: 100%;
}
#tg th {text-align: center;}
#tg td, #tg th{padding: 0.1em 0.1em 0.1em 0.1em;}
#tg td{
  padding: 0.1em 0.1em 0.1em 0.1em;
  border-bottom: 1px solid gray;
}
#tg tr:last-child td {border-bottom: none;}
#tg thead tr select {width: 79px;}

#io {
  text-align: center;
  width: 620px;
}
#io button {margin: 1em 1em;}
#io textarea {
  height: 55vh;
  overflow-y: scroll;
  overflow-x: hidden;
  width: 550px;
  word-break: break-all;
}

/* https://stephanwagner.me/only-css-loading-spinner */
/* Requires position: relative, absolute or fixed */
@-webkit-keyframes fshSpinner {
  to {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}
@keyframes fshSpinner {
  to {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}
.fshSpinner:before {
  content: '';
  box-sizing: border-box;
  position: absolute;
  top: 50%;
  left: 50%;
  width: 20px; /* TODO Find most common values here */
  height: 20px; /* TODO Find most common values here */
  margin-top: -10px; /* TODO Find most common values here */
  margin-left: -10px; /* TODO Find most common values here */
  border-radius: 50%;
  border: 2px solid #ccc;
  border-top-color: #07d;
  -webkit-animation: fshSpinner .6s linear infinite;
  animation: fshSpinner .6s linear infinite;
}
.fshSpinner64:before {
  width: 64px;
  height: 64px;
  margin-top: -32px;
  margin-left: -32px;
  border-width: 4px;
}

/* Guild Report */
.guildReportSpinner {
  width: 25px;
  height: 25px;
  display: inline-block;
  background-size: contain;
}
#potReport {text-align: center;}
#potReport > div {display: none;}
#potReport > div > div {
  display: none;
  vertical-align: top;
}
#potReport label {background: #fece2f; color: #4c3000; padding: .5em 1em;}
#potReport > #panels {padding: .5em 1em 0;}
#potReport > #panels > div {padding: .5em 1em 0;}
#potReport > #panels > #thresholds input {
  display: block;
  background-color: #f7ebd3;
  border-style: solid;
  border-width: 1px;
  border-color: #a9772c #f3d99d #f3d99d #a9772c;
  width: 4em;
}
#potReport > input {display: none;}
#potReport > input:checked + label {background: #ffa614; color: #381f00;}
#potReport > #pottab1:checked ~ #panels,
#potReport > #pottab2:checked ~ #panels,
#potReport > #pottab3:checked ~ #panels {display: block;}
#potReport > #pottab1:checked ~ #panels > #inventory,
#potReport > #pottab2:checked ~ #panels > #mapping,
#potReport > #pottab3:checked ~ #panels > #thresholds {display: inline-block;}
/* ... */

